--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
+  max-width: 600px;
+  border-radius: 25px;
+  max-width: 700px;
+  margin: 30px auto;
+  padding: 40px;
+  padding-top: 50px;
+  background-color: #fff;
+  box-shadow: 9px 9px 24px 9px #13223811;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: sans-serif;
+  background-color: #f9f7fe;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+ul {
+  margin: 0;
+  padding: 0;
 }
 
-.App-link {
-  color: #61dafb;
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li:first-letter {
+  text-transform: capitalize;
 }
