--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,14 @@
-.App {
-  max-width: 600px;
-  border-radius: 25px;
-  max-width: 700px;
-  margin: 30px auto;
-  padding: 40px;
-  padding-top: 50px;
-  background-color: #fff;
-  box-shadow: 9px 9px 24px 9px #13223811;
+html {
+  background: rgb(230, 213, 228);
+  background: linear-gradient(
+    90deg,
+    rgba(230, 213, 228, 1) 0%,
+    rgba(244, 191, 255, 1) 71%,
+    rgba(159, 93, 159, 1) 100%
+  );
 }
 
 body {
-  font-family: sans-serif;
-  background-color: #f9f7fe;
-}
-
-h1 {
-  color: #878787;
-  font-size: 24px;
-  font-weight: 100;
-  line-height: 28px;
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
-li {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  color: rgb(135, 135, 135);
-  font-size: 16px;
-  font-weight: 100;
-  line-height: 19px;
-}
-
-li:first-letter {
-  text-transform: capitalize;
+  font-family: "Courier New", Courier, monospace;
+  color: black;
 }
