--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,3 @@
-html {
-  background: rgb(230, 213, 228);
-  background: linear-gradient(
-    90deg,
-    rgba(230, 213, 228, 1) 0%,
-    rgba(244, 191, 255, 1) 71%,
-    rgba(159, 93, 159, 1) 100%
-  );
-}
-
 body {
-  font-family: "Courier New", Courier, monospace;
-  color: black;
+  font-family: sans-serif;
 }
