--- a/src/Weather.css
+++ b/src/Weather.css
@@ -6,6 +6,7 @@
   border-style: 1px solid;
   border-radius: 30px;
   box-shadow: 0 30px 50px rgb(65 50 100 / 20%);
+  max-width: 500px;
 }
 
 .github-repository {
