--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,7 +1,9 @@
 .container-app {
   text-align: center;
   display: block;
-  margin: 20px;
+  margin: 0 auto;
+  margin-top: 30px;
+  max-width: 400px;
   padding: 50px;
   border-style: 1px solid;
   border-radius: 30px;
